--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "fernet": "^0.3.1",
         "pretty-checkbox": "^3.0.3",
         "vue": "^2.6.6",
         "vue-perfect-scrollbar": "^0.1.0",
